--- a/reddit-news/package.json
+++ b/reddit-news/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reddit-news",
-  "version": "0.1.0",
+  "homepage": "https://devinarena.github.io/RNCT",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -15,9 +16,12 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
